--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "vue": "^2.5.11",
     "vue-typer": "^1.2.0",
-    "vuetify": "^2.1.9"
+    "vuetify": "^2.1.9",
+    "vue-router": "^3.1.3"
   },
   "browserslist": [
     "> 1%",
